--- a/project_0/game.ipynb
+++ b/project_0/game.ipynb
@@ -9,60 +9,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за: 101 попыток\n"
-     ]
-    }
-   ],
-   "source": [
-    "import game_v2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ваш алгоритм угадывает число в среднем за: 101 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за:5 попыток\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "101"
+       "5"
       ]
      },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "game_v2.score_game(game_v2.random_predict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ваш алгоритм угадывает число в среднем за: 101 попыток\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "101"
-      ]
-     },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,40 +26,13 @@
    "source": [
     "from game_v2 import score_game\n",
     "from game_v2 import random_predict\n",
-    "score_game(random_predict) #вызов функции"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 10\n",
-    "z = n\n",
-    "n = ['ryuitui', 13]"
+    "score_game(random_predict)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Пример"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## second level"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# level"
-   ]
+   "source": []
   }
  ],
  "metadata": {
