--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -144,6 +144,74 @@
     "count = dq.count(8)\n",
     "print(count)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ЗАДАНИЕ 4.3\n",
+    "# Напишите функцию brackets(line), которая определяет, является ли последовательность из круглых скобок line правильной.\n",
+    "\n",
+    "# Примечание 1. Какая последовательность скобок правильная?\n",
+    "\n",
+    "# Правильной скобочной последовательностью назовём такую последовательность скобок, \n",
+    "# в которой для каждой открывающей скобки есть последующая соответствующая ей закрывающая скобка. \n",
+    "# Соответственно, остальные скобочные последовательности назовём неправильными. \n",
+    "# Пустую строку будем считать правильной последовательностью.\n",
+    "\n",
+    "# Примечание 2.Для решения этой задачи потребуется использовать стек.\n",
+    "\n",
+    "# Посимвольно переберите строку. Если встретилась открывающаяся скобка, положите её в стек. \n",
+    "# Если встретилась закрывающаяся скобка, извлеките скобку из стека.\n",
+    "\n",
+    "# Если стек пустой, то есть извлечь скобку нельзя, последовательность неправильная.\n",
+    "# Если строка закончилась и стек стал пустым, последовательность правильная.\n",
+    "# Если в стеке остались скобки, последовательность неправильная.\n",
+    "# Пример\n",
+    "\n",
+    "print(brackets(\"(()())\"))\n",
+    "# True\n",
+    "print(brackets(\"\"))\n",
+    "# True\n",
+    "print(brackets(\"(()()))\"))\n",
+    "# False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('WokAndRice', 4.9), ('WokToWork', 4.9), ('General Foods', 4.8), ('New Age', 4.6), ('Belissimo', 4.5), ('CakeAndCoffee', 4.2), ('CakeOClock', 4.2), ('CakeTime', 4.1), ('Nice Cakes', 3.9), ('Old Gold', 3.3), ('Old Wine Cellar', 3.3), ('Old York', 3.3)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Задание 4.9\n",
+    "# Дан список кортежей ratings с рейтингами кафе. \n",
+    "# Кортеж состоит из названия и рейтинга кафе.\n",
+    "\n",
+    "# Необходимо отсортировать кортеж по убыванию рейтинга. \n",
+    "# Если рейтинги совпадают, то отсортировать кафе дополнительно по названию в алфавитном порядке.\n",
+    "\n",
+    "# Получите словарь cafes с упорядоченными ключами из отсортированного списка, \n",
+    "# где ключи — названия кафе, а значения — их рейтинг.\n",
+    "\n",
+    "ratings = [('Old York', 3.3), ('New Age', 4.6), ('Old Gold', 3.3), ('General Foods', 4.8),\n",
+    "           ('Belissimo', 4.5), ('CakeAndCoffee', 4.2), ('CakeOClock', 4.2), ('CakeTime', 4.1),\n",
+    "           ('WokToWork', 4.9), ('WokAndRice', 4.9), ('Old Wine Cellar', 3.3), ('Nice Cakes', 3.9)]\n",
+    "from collections import OrderedDict\n",
+    "ratings.sort(key=lambda x: (-x[1], x[0]))\n",
+    "cafes = OrderedDict(ratings)\n",
+    "print(cafes)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
