--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -295,10 +295,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(36871, 'office', False)\n",
+      "defaultdict(<class 'collections.deque'>, {'office': deque([36871])}) (36871, 'office', False)\n",
+      "(40690, 'office', False)\n",
+      "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690])}) (40690, 'office', False)\n",
+      "(35364, 'voltage', False)\n",
+      "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690]), 'voltage': deque([35364])}) (35364, 'voltage', False)\n",
+      "(41667, 'voltage', True)\n",
+      "(33850, 'office', False)\n",
+      "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690, 33850]), 'voltage': deque([41667, 35364])}) (33850, 'office', False)\n",
+      "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690, 33850]), 'voltage': deque([41667, 35364])})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ЗАДАНИЕ 4.10\n",
+    "# Напишите функцию task_manager(tasks), которая принимает список задач tasks для нескольких серверов. \n",
+    "# Каждый элемент списка состоит из кортежа (<номер задачи>, <название сервера>, <высокий приоритет задачи>).\n",
+    "\n",
+    "# Функция должна создавать словарь и заполнять его задачами по следующему принципу: название сервера — ключ, \n",
+    "# по которому хранится очередь задач для конкретного сервера.\n",
+    "\n",
+    "# Если поступает задача без высокого приоритета (последний элемент кортежа — False), \n",
+    "# добавить номер задачи в конец очереди. Если приоритет высокий, добавить номер в начало.\n",
+    "\n",
+    "# Для словаря используйте defaultdict, для очереди — deque.\n",
+    "\n",
+    "# Функция возвращает полученный словарь с задачами.\n",
+    "\n",
+    "from collections import defaultdict, deque\n",
+    "\n",
+    "tasks = [(36871, 'office', False),\n",
+    "(40690, 'office', False),\n",
+    "(35364, 'voltage', False),\n",
+    "(41667, 'voltage', True),\n",
+    "(33850, 'office', False)]\n",
+    "\n",
+    "def task_manager(tasks):\n",
+    "    dd = defaultdict(deque)\n",
+    "    for task in tasks:\n",
+    "        print(task)\n",
+    "        if task[2] == False:\n",
+    "            dd[task[1]].append(task[0])\n",
+    "            print(dd, task)\n",
+    "        else:\n",
+    "            dd[task[1]].appendleft(task[0])\n",
+    "    return dd\n",
+    "    \n",
+    "\n",
+    "\n",
+    "print(task_manager(tasks))\n",
+    "# defaultdict(, {'voltage': deque([41667, 35364]),\n",
+    "# 'office': deque([36871, 40690, 33850])})"
+   ]
   }
  ],
  "metadata": {
