--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -295,22 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36871, 'office', False)\n",
-      "defaultdict(<class 'collections.deque'>, {'office': deque([36871])}) (36871, 'office', False)\n",
-      "(40690, 'office', False)\n",
-      "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690])}) (40690, 'office', False)\n",
-      "(35364, 'voltage', False)\n",
-      "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690]), 'voltage': deque([35364])}) (35364, 'voltage', False)\n",
-      "(41667, 'voltage', True)\n",
-      "(33850, 'office', False)\n",
-      "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690, 33850]), 'voltage': deque([41667, 35364])}) (33850, 'office', False)\n",
       "defaultdict(<class 'collections.deque'>, {'office': deque([36871, 40690, 33850]), 'voltage': deque([41667, 35364])})\n"
      ]
     }
@@ -341,10 +332,8 @@
     "def task_manager(tasks):\n",
     "    dd = defaultdict(deque)\n",
     "    for task in tasks:\n",
-    "        print(task)\n",
     "        if task[2] == False:\n",
     "            dd[task[1]].append(task[0])\n",
-    "            print(dd, task)\n",
     "        else:\n",
     "            dd[task[1]].appendleft(task[0])\n",
     "    return dd\n",
@@ -354,6 +343,15 @@
     "print(task_manager(tasks))\n",
     "# defaultdict(, {'voltage': deque([41667, 35364]),\n",
     "# 'office': deque([36871, 40690, 33850])})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   }
  ],
