--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -347,11 +347,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1025\n",
+      "<class 'numpy.int32'>\n",
+      "4\n",
+      "<class 'numpy.bool_'>\n",
+      "<class 'numpy.bytes_'>\n",
+      "<class 'numpy.clongdouble'>\n",
+      "<class 'numpy.complex128'>\n",
+      "<class 'numpy.complex64'>\n",
+      "<class 'numpy.datetime64'>\n",
+      "<class 'numpy.float16'>\n",
+      "<class 'numpy.float32'>\n",
+      "<class 'numpy.float64'>\n",
+      "<class 'numpy.int16'>\n",
+      "<class 'numpy.int32'>\n",
+      "<class 'numpy.int64'>\n",
+      "<class 'numpy.int8'>\n",
+      "<class 'numpy.intc'>\n",
+      "<class 'numpy.longdouble'>\n",
+      "<class 'numpy.object_'>\n",
+      "<class 'numpy.str_'>\n",
+      "<class 'numpy.timedelta64'>\n",
+      "<class 'numpy.uint16'>\n",
+      "<class 'numpy.uint32'>\n",
+      "<class 'numpy.uint64'>\n",
+      "<class 'numpy.uint8'>\n",
+      "<class 'numpy.uintc'>\n",
+      "<class 'numpy.void'>\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "np.iinfo(np.int64)\n",
+    "\n",
+    "a = np.int32(1000)\n",
+    "b = a + 25\n",
+    "print(b)\n",
+    "# 1025\n",
+    "print(type(b))\n",
+    "a = np.int8(260)\n",
+    "print(a)\n",
+    "np.finfo(np.float64)\n",
+    "# print(np.sctypeDict)\n",
+    "# print(len(np.sctypeDict))\n",
+    "print(*sorted(map(str, set(np.sctypeDict.values()))), sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.uint8(-456)\n",
+    "print(a)"
    ]
   }
  ],
