--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -403,21 +403,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56\n"
+      "56\n",
+      "[ 3.452340e+05  8.763621e+05  0.000000e+00 -1.000000e+03  1.000000e+08]\n",
+      "(array([-6.  , -5.55, -5.1 , -4.65, -4.2 , -3.75, -3.3 , -2.85, -2.4 ,\n",
+      "       -1.95, -1.5 , -1.05, -0.6 , -0.15,  0.3 ,  0.75,  1.2 ,  1.65,\n",
+      "        2.1 ,  2.55,  3.  ,  3.45,  3.9 ,  4.35,  4.8 ,  5.25,  5.7 ,\n",
+      "        6.15,  6.6 ,  7.05,  7.5 ,  7.95,  8.4 ,  8.85,  9.3 ,  9.75,\n",
+      "       10.2 , 10.65, 11.1 , 11.55, 12.  , 12.45, 12.9 , 13.35, 13.8 ,\n",
+      "       14.25, 14.7 , 15.15, 15.6 , 16.05, 16.5 , 16.95, 17.4 , 17.85,\n",
+      "       18.3 , 18.75, 19.2 , 19.65, 20.1 , 20.55]), 0.45)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "a = np.uint8(-456)\n",
-    "print(a)"
+    "print(a)\n",
+    "arr = np.array([1,5,2,9,10])\n",
+    "arr.dtype\n",
+    "c = np.array([345234, 876362.12, 0, -1000, 99999999])\n",
+    "c.dtype\n",
+    "c = np.float32(c)\n",
+    "print(c)\n",
+    "c.dtype\n",
+    "\n",
+    "b = np.linspace(-6, 21, 60, retstep=True, endpoint=False)\n",
+    "print(b)"
    ]
   }
  ],
