add action with array

--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +412,7 @@
      "text": [
       "56\n",
       "[ 3.452340e+05  8.763621e+05  0.000000e+00 -1.000000e+03  1.000000e+08]\n",
+      "float32\n",
       "(array([-6.  , -5.55, -5.1 , -4.65, -4.2 , -3.75, -3.3 , -2.85, -2.4 ,\n",
       "       -1.95, -1.5 , -1.05, -0.6 , -0.15,  0.3 ,  0.75,  1.2 ,  1.65,\n",
       "        2.1 ,  2.55,  3.  ,  3.45,  3.9 ,  4.35,  4.8 ,  5.25,  5.7 ,\n",
@@ -432,10 +433,183 @@
     "c.dtype\n",
     "c = np.float32(c)\n",
     "print(c)\n",
-    "c.dtype\n",
+    "print(c.dtype)\n",
     "\n",
     "b = np.linspace(-6, 21, 60, retstep=True, endpoint=False)\n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30305\n",
+      "-32037\n",
+      "[13240  7994 32592 20149 13754 11795  -564]\n",
+      "[-17182  15790  25397  11795  12578    -47]\n",
+      "[[-1297 -4593  6451]\n",
+      " [28655 -6012 21762]\n",
+      " [32592 20149 13754]]\n",
+      "[-32037  29943   -564   8225   7181 -18049]\n",
+      "[[-13586  25936  13348  13240 -21725 -16841]\n",
+      " [ 15203 -30968  28049   7994  -8681 -25392]\n",
+      " [ 28445  -1297  28655  32592  30305 -17278]\n",
+      " [-27117  -4593  -6012  20149  22260  11740]\n",
+      " [ -1781   6451  21762  13754 -17918   5916]\n",
+      " [-17182  15790  25397  11795  12578    -47]\n",
+      " [-18049   7181   8225   -564  29943 -32037]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Задание 7.2\n",
+    "import numpy as np\n",
+    "mystery = np.array([[-13586,  15203,  28445, -27117,  -1781, -17182, -18049],\n",
+    "       [ 25936, -30968,  -1297,  -4593,   6451,  15790,   7181],\n",
+    "       [ 13348,  28049,  28655,  -6012,  21762,  25397,   8225],\n",
+    "       [ 13240,   7994,  32592,  20149,  13754,  11795,   -564],\n",
+    "       [-21725,  -8681,  30305,  22260, -17918,  12578,  29943],\n",
+    "       [-16841, -25392, -17278,  11740,   5916,    -47, -32037]],\n",
+    "      dtype=np.int16)\n",
+    "# Выполните все пукты задания по порядку.\n",
+    "\n",
+    "# Пожалуйста, не меняйте названия переменных, в которых должны появиться ответы.\n",
+    "\n",
+    "# В переменную elem_5_3 сохраните элемент из 5 строки и 3 столбца\n",
+    "\n",
+    "# В переменную last сохраните элемент из последней строки последнего столбца\n",
+    "\n",
+    "# В переменную line_4 сохраните строку 4\n",
+    "\n",
+    "# В переменную col_2 сохраните предпоследний столбец\n",
+    "\n",
+    "# Из строк 2-4 (включительно) получите столбцы 3-5 (включительно). Результат сохраните в переменную part\n",
+    "\n",
+    "# Сохраните в переменную rev последний столбец в обратном порядке\n",
+    "\n",
+    "# Сохраните в переменную trans транспонированный массив\n",
+    "\n",
+    "\n",
+    "elem_5_3 = mystery[4, 2]\n",
+    "last = mystery[-1, -1]\n",
+    "line_4 = mystery[3]\n",
+    "col_2 = mystery[:,-2]\n",
+    "part = mystery[1:4, 2:5]\n",
+    "rev = mystery[::-1,-1]\n",
+    "trans = mystery.transpose()\n",
+    "\n",
+    "print(elem_5_3)\n",
+    "print(last)\n",
+    "print(line_4)\n",
+    "print(col_2)\n",
+    "print(part)\n",
+    "print(rev)\n",
+    "print(trans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isnan(np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False  True False False False False  True False False False\n",
+      "  True False False]\n",
+      "3\n",
+      "[ 12279. -26024.  28745.     nan  31244.  -2365.  -6974.  -9212.     nan\n",
+      " -17722.  16132.  25933.     nan -16431.  29810.]\n",
+      "[ 12279. -26024.  28745.      0.  31244.  -2365.  -6974.  -9212.      0.\n",
+      " -17722.  16132.  25933.      0. -16431.  29810.]\n",
+      "int32\n",
+      "[      12279      -26024       28745 -2147483648       31244       -2365\n",
+      "       -6974       -9212 -2147483648      -17722       16132       25933\n",
+      " -2147483648      -16431       29810]\n",
+      "[-26024. -17722. -16431.  -9212.  -6974.  -2365.      0.      0.      0.\n",
+      "  12279.  16132.  25933.  28745.  29810.  31244.]\n",
+      "[[-26024.  -2365.  16132.]\n",
+      " [-17722.      0.  25933.]\n",
+      " [-16431.      0.  28745.]\n",
+      " [ -9212.      0.  29810.]\n",
+      " [ -6974.  12279.  31244.]]\n",
+      "[-2365.     0.     0.     0. 12279.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Задание 7.4\n",
+    "# Получите булевый массив nans_index с информацией о np.nan в массиве mystery: \n",
+    "# True - значение пропущено, False - значение не пропущено\n",
+    "\n",
+    "# В переменную `n_nan сохраните число пропущенных значений\n",
+    "\n",
+    "# Скопируйте массив mystery в массив mystery_new. \n",
+    "# Заполните пропущенные значения в массиве mystery_new нулями\n",
+    "\n",
+    "# Поменяйте тип данных в массиве mystery на int32 и сохраните в переменную mystery_int\n",
+    "\n",
+    "# Отсортируйте значения в массиве по возрастанию и сохраните результат в переменную array\n",
+    "\n",
+    "# Сохраните в массив table двухмерный массив, полученный из массива array. \n",
+    "# В нём должно быть 5 строк и 3 столбца. Причём порядок заполнения должен быть по столбцам!\n",
+    "\n",
+    "# Например,\n",
+    "\n",
+    "#  1, 2, 3, 4 -> 1    3\n",
+    "#                2    4\n",
+    "# Сохраните в переменную col средний столбец из table\n",
+    "# Примечание. Не меняйте названия переменных.\n",
+    "\n",
+    "import numpy as np\n",
+    "mystery = np.array([ 12279., -26024.,  28745.,  np.nan,  31244.,  -2365.,  -6974.,\n",
+    "        -9212., np.nan, -17722.,  16132.,  25933.,  np.nan, -16431.,\n",
+    "        29810.], dtype=np.float32)\n",
+    "\n",
+    "nans_index = np.isnan(mystery)\n",
+    "n_nan = np.count_nonzero(np.isnan(mystery))\n",
+    "mystery_new = mystery.copy()\n",
+    "mystery_new[np.isnan(mystery_new)] = 0\n",
+    "mystery_int = np.int32(mystery)\n",
+    "array = np.sort(mystery_new)\n",
+    "table = array.reshape(5, 3, order='F')\n",
+    "col = table[:,1]\n",
+    "\n",
+    "print(nans_index)\n",
+    "print(n_nan)\n",
+    "print(mystery)\n",
+    "print(mystery_new)\n",
+    "print(mystery_int.dtype)\n",
+    "print(mystery_int)\n",
+    "print(array)\n",
+    "print(table)\n",
+    "print(col)"
    ]
   }
  ],
