--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -610,6 +610,136 @@
     "print(array)\n",
     "print(table)\n",
     "print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "120.6358155772986\n",
+      "4828\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Задание 8.4\n",
+    "# Векторы в геометрии называются сонаправленными, \n",
+    "# если они коллинеарны и их направления совпадают. \n",
+    "# На плоскости это выглядит следующим образом:\n",
+    "\n",
+    "\n",
+    "# Также векторы могут быть параллельны и в пространстве. \n",
+    "# На практике есть несколько способов определить сонаправленность векторов. \n",
+    "# Один из них: сумма длин сонаправленных векторов должна быть равной длине суммы двух векторов.\n",
+    "\n",
+    "# С помощью этого критерия найдите пару сонаправленных векторов.\n",
+    "import numpy as np\n",
+    "a = np.array([23, 34, 27])\n",
+    "b = np.array([-54, 1,  46])\n",
+    "c = np.array([46, 68, 54])\n",
+    "\n",
+    "print((np.linalg.norm(b) + np.linalg.norm(c)) == (np.linalg.norm(b + c)))\n",
+    "\n",
+    "print(np.linalg.norm(b-c))\n",
+    "\n",
+    "print(np.dot(c,a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8 8 3]\n",
+      "[7 7 0]\n",
+      "[4 2 5]\n",
+      "[2 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(100)\n",
+    "print(np.random.randint(10, size=3))\n",
+    "# [8 8 3]\n",
+    "print(np.random.randint(10, size=3))\n",
+    "# [7 7 0]\n",
+    "print(np.random.randint(10, size=3))\n",
+    "print(np.random.randint(10, size=3))\n",
+    "# [4 2 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6 10  2  8 14 16  4 12]\n",
+      "[ 6 10  2  8 14 16  4 12]\n",
+      "[ 4  6 10]\n",
+      "[ 6 10  4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Задание 9.6\n",
+    "# Задайте seed = 2021.\n",
+    "\n",
+    "# Сохраните в переменные необходимые значения.\n",
+    "\n",
+    "# Примечание 1. Не меняйте названия переменных и последовательность генерации случайных чисел в задании.\n",
+    "\n",
+    "# Примечание 2. Не забудьте импортировать numpy и сразу задать seed = 2021\n",
+    "\n",
+    "# В simple сохранте случайное число в диапазоне от 0 до 1\n",
+    "\n",
+    "# Сгенерируйте 120 чисел в диапазоне от -150 до 2021, сохраните их в переменную randoms\n",
+    "\n",
+    "# Получите массив из случайных целых чисел от 1 до 100 (включительно) из 3 строк и 2 столбцов. \n",
+    "# Сохраните результат в table\n",
+    "\n",
+    "# В переменную even сохраните четные числа от 2 до 16 (включительно)\n",
+    "\n",
+    "# Скопируйте even в переменную mix. Перемешайте числа в mix так, чтобы массив изменился\n",
+    "\n",
+    "# Получите из even 3 числа без повторений. Сохраните их в переменную select\n",
+    "\n",
+    "# Получите переменную triplet, которая должна содержать перемешанные значения из массива select \n",
+    "# (сам select измениться не должен)\n",
+    "\n",
+    "import numpy as np\n",
+    "np.random.seed(2021)\n",
+    "\n",
+    "simple = np.random.rand()\n",
+    "randoms = np.random.uniform(-150, 2021, size=120)\n",
+    "table = np.random.randint(1, 101, size=(3,2))\n",
+    "even = np.arange(2, 17, 2)\n",
+    "np.random.shuffle(even)\n",
+    "mix = even\n",
+    "select = np.random.choice(mix, size=3, replace=False)\n",
+    "triplet = np.random.permutation(select)\n",
+    "\n",
+    "# print(randoms)\n",
+    "print(even)\n",
+    "print(mix)\n",
+    "print(select)\n",
+    "print(triplet)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
