--- a/9. Python. NumPy.ipynb
+++ b/9. Python. NumPy.ipynb
@@ -76,15 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OrderedDict([('2001', -2.5), ('2000', -4.4), ('2002', -4.4), ('2003', -9.5)])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "OrderedDict([('2001', -2.5), ('2000', -4.4), ('2002', -4.4), ('2003', -9.5)])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -98,11 +101,16 @@
     "# Ключи необходимо отсортировать в порядке убывания соответствующих им температур.\n",
     "\n",
     "# Пример входа:\n",
+    "from collections import OrderedDict\n",
+    "def check(temps):\n",
+    "    temps = OrderedDict(sorted(temps, key=lambda x: -x[1]))\n",
+    "    \n",
+    "    return temps\n",
     "\n",
     "temps =  [('2000', -4.4), ('2001', -2.5), ('2002', -4.4), ('2003', -9.5)]\n",
-    "from collections import OrderedDict\n",
-    "t = OrderedDict(sorted(temps, key=lambda x: -x[1]))\n",
-    "print(t)\n",
+    "check(temps)\n",
+    "\n",
+    "\n",
     "\n",
     "# Пример вывода:\n",
     "\n",
@@ -740,6 +748,326 @@
     "print(triplet)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Задание 10.6\n",
+    "# Напишите функцию get_chess(a), \n",
+    "# которая принимает на вход длину стороны квадрата a и возвращает двумерный массив формы (a, a), \n",
+    "# заполненный 0 и 1 в шахматном порядке. В левом верхнем углу всегда должен быть ноль.\n",
+    "\n",
+    "# Примечание. воспользуйтесь функцией np.zeros, \n",
+    "# а затем с помощью срезов без циклов задайте необходимым элементам значение 1.\n",
+    "\n",
+    "# В Python для получения каждого второго элемента используется срез [::2]. \n",
+    "# Подумайте, как грамотно применить этот принцип к двумерному массиву.\n",
+    "\n",
+    "# Пример\n",
+    "import numpy as np\n",
+    "def get_chess(a):\n",
+    "    arr = np.zeros((a,a))\n",
+    "    arr[::2, 1::2] = 1\n",
+    "    arr[1::2, ::2] = 1\n",
+    "    return arr\n",
+    "\n",
+    "\n",
+    "get_chess(1)\n",
+    "# array([[0.]])\n",
+    "\n",
+    "#get_chess(4)\n",
+    "# array([[0., 1., 0., 1.],\n",
+    "#        [1., 0., 1., 0.],\n",
+    "#        [0., 1., 0., 1.],\n",
+    "#        [1., 0., 1., 0.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([3, 2, 1, 4, 5]), 2865273886)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ЗАДАНИЕ 10.7\n",
+    "# Вы разрабатываете приложение для прослушивания музыки. \n",
+    "# Конечно же, там будет доступна функция перемешивания плейлиста. \n",
+    "# Пользователю может настолько понравиться перемешанная версия плейлиста, \n",
+    "# что он захочет сохранить его копию. \n",
+    "# Однако вы не хотите хранить в памяти новую версию плейлиста, \n",
+    "# а просто хотите сохранять тот seed, с которым он был сгенерирован.\n",
+    "\n",
+    "# Для этого напишите функцию shuffle_seed(array), \n",
+    "# которая принимает на вход массив из чисел, \n",
+    "# генерирует случайное число для seed в диапазоне \n",
+    "# от 0 до 2**32 - 1 (включительно) и возвращает кортеж: \n",
+    "# перемешанный с данным seed массив (исходный массив должен оставаться без изменений), \n",
+    "# а также seed, с которым этот массив был получен.\n",
+    "\n",
+    "# Пример\n",
+    "import numpy as np\n",
+    "def shuffle_seed(array):\n",
+    "    seed = np.random.randint(1, 2**32, dtype=np.uint32)\n",
+    "    np.random.seed(seed)\n",
+    "    return np.random.permutation(array), seed\n",
+    "     \n",
+    "\n",
+    "array = [1, 2, 3, 4, 5]\n",
+    "shuffle_seed(array)\n",
+    "# (array([1, 3, 2, 4, 5]), 2332342819)\n",
+    "shuffle_seed(array)\n",
+    "# (array([4, 5, 2, 3, 1]), 4155165971)\n",
+    "# Примечание. Не забудьте импортировать бибилиотеки.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5.196152422706632, 10.392304845413264)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ЗАДАНИЕ 10.8\n",
+    "# Напишите функцию min_max_dist(*vectors), \n",
+    "# которая принимает на вход неограниченное число векторов через запятую. \n",
+    "# Гарантируется, что все векторы, которые передаются, одинаковой длины.\n",
+    "\n",
+    "# Функция возвращает минимальное и максимальное расстояние между векторами в виде кортежа.\n",
+    "\n",
+    "# Пример\n",
+    "import numpy as np\n",
+    "def min_max_dist(*vectors):\n",
+    "    dict = []\n",
+    "    print(len(vectors))\n",
+    "    for i in range(len(vectors)):\n",
+    "        for j in range(i+1, len(vectors)):\n",
+    "            dict.append(np.linalg.norm(vectors[i]-vectors[j]))\n",
+    "    return (min(dict), max(dict))\n",
+    "\n",
+    "\n",
+    "vec1 = np.array([1,2,3])\n",
+    "vec2 = np.array([4,5,6])\n",
+    "vec3 = np.array([7, 8, 9])\n",
+    "\n",
+    "min_max_dist(vec1, vec2, vec3)\n",
+    "# (5.196152422706632, 10.392304845413264)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ЗАДАНИЕ 10.9\n",
+    "# Напишите функцию any_normal, \n",
+    "# которая принимает на вход неограниченное число векторов через запятую. \n",
+    "# Гарантируется, что все векторы, которые передаются, одинаковой длины.\n",
+    "\n",
+    "# Функция возвращает True, если есть хотя бы одна пара перпендикулярных векторов. Иначе возвращает False.\n",
+    "\n",
+    "# Пример\n",
+    "import numpy as np\n",
+    "def any_normal(*vectors):\n",
+    "    dict = []\n",
+    "    for i in range(len(vectors)):\n",
+    "        for j in range(i+1, len(vectors)):\n",
+    "            if np.dot(vectors[i], vectors[j]) == 0:\n",
+    "                return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "vec1 = np.array([2, 1])\n",
+    "vec2 = np.array([-1, 2])\n",
+    "vec3 = np.array([3,4])\n",
+    "print(any_normal(vec1, vec2, vec3))\n",
+    "# True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[73, 28, 17, 95, 85],\n",
+       "        [ 8,  7, 55, 31,  1],\n",
+       "        [45, 57, 97, 62, 24],\n",
+       "        [95, 36, 21, 29, 79],\n",
+       "        [71, 23,  9, 46, 46]],\n",
+       "\n",
+       "       [[43, 86, 30, 82, 49],\n",
+       "        [62, 72, 52, 82, 11],\n",
+       "        [50, 23, 63, 53, 57],\n",
+       "        [41, 29,  8, 74, 87],\n",
+       "        [ 6, 72, 25, 56, 81]],\n",
+       "\n",
+       "       [[90, 92, 17, 37, 80],\n",
+       "        [78, 43, 43, 47, 78],\n",
+       "        [89,  1, 19,  5, 49],\n",
+       "        [28, 30, 80, 58, 88],\n",
+       "        [64, 69, 89, 68, 48]]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ЗАДАНИЕ 10.10\n",
+    "# Напишите функцию get_loto(num), генерирующую трёхмерный массив случайных целых чисел от 1 до 100 (включительно). \n",
+    "# Это поля для игры в лото.\n",
+    "\n",
+    "# Трёхмерный массив должен состоять из таблиц чисел формы 5х5, то есть итоговая форма — (num, 5, 5).\n",
+    "\n",
+    "# Функция возвращает полученный массив.\n",
+    "\n",
+    "# Пример\n",
+    "import numpy as np\n",
+    "def get_loto(num):\n",
+    "    return np.random.randint(1, 101, size=(num, 5, 5))\n",
+    " \n",
+    "get_loto(3)\n",
+    "# Результат:\n",
+    "\n",
+    "# array([[[ 35,  66,  38,  11,  32],\n",
+    "#        [ 32,   7,  37,  83,  42],\n",
+    "#        [ 89,  37,  19,  51,  89],\n",
+    "#        [ 70, 100,  83,   5,  11],\n",
+    "#        [ 20,  13,  60,  26,  41]],\n",
+    "\n",
+    "#       [[ 23,  49,  76,  44,  43],\n",
+    "#        [ 59,  63,  99,  92,   2],\n",
+    "#        [ 83,   4,  25,  73,  19],\n",
+    "#        [ 10,  18,  40,  11,  21],\n",
+    "#        [ 58,  45,  73,  93,  61]],\n",
+    "\n",
+    "#       [[100,  88,  70,  34,  51],\n",
+    "#        [  5,  35,  36,  85,  88],\n",
+    "#        [ 72,  23,  87,  30,  40],\n",
+    "#        [ 29,  21,  51,  73,  81],\n",
+    "#        [ 91,  19,  87,  60,  27]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[83, 93, 64, 89, 86],\n",
+       "        [41, 14, 90, 35, 16],\n",
+       "        [82,  8, 71, 22, 60],\n",
+       "        [13,  9, 31, 23, 50],\n",
+       "        [54, 80, 61, 95, 91]],\n",
+       "\n",
+       "       [[98, 40, 62, 39, 17],\n",
+       "        [ 6, 53, 51, 65, 49],\n",
+       "        [44, 10, 63, 38, 28],\n",
+       "        [76, 18,  7, 69,  2],\n",
+       "        [73, 67, 12, 25, 81]],\n",
+       "\n",
+       "       [[37, 79, 33,  0,  4],\n",
+       "        [97, 88, 87, 55, 70],\n",
+       "        [94, 45, 56, 11, 27],\n",
+       "        [46, 58, 57, 48, 66],\n",
+       "        [32, 21,  5,  3, 15]]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ЗАДАНИЕ 10.11\n",
+    "# Напишите функцию get_unique_loto(num). \n",
+    "# Она так же, как и функция в задании 49.9.10, \n",
+    "# генерирует num полей для игры в лото, однако теперь на каждом поле 5х5 числа не могут повторяться.\n",
+    "\n",
+    "# Функция также должна возвращать массив формы num x 5 x 5.\n",
+    "\n",
+    "# Пример\n",
+    "import numpy as np\n",
+    "def get_unique_loto(num):\n",
+    "    return np.random.choice(100, size=(num, 5, 5), replace=False)\n",
+    "\n",
+    "get_unique_loto(3)\n",
+    "# Результат:\n",
+    "\n",
+    "# array([[[26, 91, 73,  7, 16],\n",
+    "#        [46, 85, 78, 77, 51],\n",
+    "#        [84, 86, 55, 71, 58],\n",
+    "#        [17, 61, 50, 30, 97],\n",
+    "#        [66, 29, 38, 41, 32]],\n",
+    "\n",
+    "#       [[49, 32,  3, 21, 85],\n",
+    "#        [45,  8, 94, 46, 96],\n",
+    "#        [41, 38, 58, 37, 98],\n",
+    "#        [66, 77, 54, 80, 26],\n",
+    "#        [62, 63, 72,  5, 43]],\n",
+    "\n",
+    "#       [[55, 60,  6, 80, 97],\n",
+    "#        [23, 69, 94,  9, 24],\n",
+    "#        [17, 98, 27, 63, 79],\n",
+    "#        [84, 74, 51, 39, 54],\n",
+    "#        [77, 30, 48, 75, 85]]])"
    ]
   }
  ],
